2010-04-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c (maininit) [__SyncTeX__]: omit warning about no
	SyncTeX for pTeX.

2010-04-11  Karl Berry  <karl@tug.org>

	* texmfmp.c,
	* printversion.c,
	* openclose.c,
	* chartostring.c,
	* basechsuffix.c: remove useless casts to (string) or (char *),
	etc. of xmalloc.

2010-03-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* openclose.c (open_input): Fixed a typo.
	From Akira Kakuto <kakuto@fuk.kindai.ac.jp>, 30 Mar 2010 12:33:33.

2010-03-30  Karl Berry  <karl@tug.org>

	* (recorder_start): throw in pid in recorder_name so parallel builds
	have a chance of working.  Report from
	Kirill Smelkov, Debian bug 575731, tex-k mail 29 Mar 2010 06:18:35.

2010-03-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* setupvar.c (setupboundvariable): Fix off by one error in msg.

2010-03-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c (setupboundvariable): Moved from here ...
	* setupvar.c (new): ... to here for use in non-engine programs.
	* lib.h (setupboundvariable): Moved from ../texmfmp.h to here.
	* Makefile.am (lib_a_SOURCES): Added setupvar.c.

2010-02-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c (IPC) [WIN32]: #include <winsock2.h> instead of
	<sys/socket.h> and <fcntl.h>, use ioctlsocket() instead of
	fcnt() for non-blocking, and use Sleep() instead of sleep().

2010-02-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: #include <window/mfdisplay.h> instead of externs.

2010-02-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c (calledit): Use win32_system() with two args only
	for MinGW32, native WIN32 uses only one arg.
	(catch_interrupt) [WIN32]: Declare as static.

2010-02-01  Karl Berry  <karl@tug.org>

	* openclose.c (open_input): do not try prepending TEXMFOUTPUT for
	reading if the filename is absolute.

2010-01-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c (mk_shellcmdlist): Declare string param as const.

2010-01-22  Peter Breitenlohner  <peb@mppmu.mpg.de>
