@@ -1,3 +1,9 @@
+2010-04-19  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* openclose.c (fullnameoffile, recorder_enabled,
+	output_directory): Remove extern decls, are in ../../lib/lib.h.
+	Apply recent changes in ../../lib/openclose.c.
+
 2010-04-18  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* usage.c: Removed.
